--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="index.css" />
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Oswald"
-  />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald" />
 </head>
 
 <body>
@@ -37,14 +34,9 @@
       <div class="section" id="my-work">
         <div class="work-tiles close-mid-tiles">
           <div class="work-image">
-            <a
-              href="https://neetocode.com/site/rohith-seby/HCJ-FSY"
-              alt="finding frogs project"
-              target="_blank"
-            >
+            <a href="https://neetocode.com/site/rohith-seby/HCJ-FSY" alt="finding frogs project" target="_blank">
               <img
-                src="https://cdn.discordapp.com/attachments/431354432987594763/1027138920535822366/battleshipbw.jpg"
-              />
+                src="https://cdn.discordapp.com/attachments/431354432987594763/1027138920535822366/battleshipbw.jpg" />
             </a>
           </div>
           <div class="work-caption">FINDING FROGS</div>
@@ -52,9 +44,7 @@
         <div class="work-tiles">
           <div class="work-image">
             <a href="" alt="weather website project" target="_blank">
-              <img
-                src="https://cdn.discordapp.com/attachments/431354432987594763/1027138920808460348/weatherbw.jpg"
-              />
+              <img src="https://cdn.discordapp.com/attachments/431354432987594763/1027138920808460348/weatherbw.jpg" />
             </a>
           </div>
           <div class="work-caption">WEATHER WEBSITE</div>
@@ -64,8 +54,7 @@
           <div class="work-image">
             <a href="" alt="placeholder" target="_blank">
               <img
-                src="https://images.unsplash.com/photo-1573523765924-e6c704ce8048?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8MTYlM0E5fGVufDB8fDB8fA%3D%3D&w=1000&q=80"
-              />
+                src="https://images.unsplash.com/photo-1573523765924-e6c704ce8048?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8MTYlM0E5fGVufDB8fDB8fA%3D%3D&w=1000&q=80" />
             </a>
           </div>
           <div class="work-caption">PLACEHOLDER</div>
@@ -74,8 +63,7 @@
           <div class="work-image">
             <a href="" alt="placeholder" target="_blank">
               <img
-                src="https://c4.wallpaperflare.com/wallpaper/765/273/170/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg"
-              />
+                src="https://c4.wallpaperflare.com/wallpaper/765/273/170/3-316-16-9-aspect-ratio-s-sfw-wallpaper-preview.jpg" />
             </a>
           </div>
           <div class="work-caption">PLACEHOLDER</div>
@@ -92,32 +80,14 @@
       </div>
     </div>
     <div id="socials">
-      <a href="https://www.github.com" class="social-links" target="_blank"
-        >github➚</a
-      >
-      <a href="https://www.linkedin.com" class="social-links" target="_blank"
-        >linkedin➚</a
-      >
+      <a href="https://www.github.com" class="social-links" target="_blank">github➚</a>
+      <a href="https://www.linkedin.com" class="social-links" target="_blank">linkedin➚</a>
     </div>
     <div id="sidebar-bottom-left">
-      <a
-        href="mailto:rohithseby21@gmail.com"
-        class="social-links sidebar"
-        target="_blank"
-        >email➚</a
-      ><br />
-      <a
-        href="https://www.twitter.com"
-        class="social-links sidebar"
-        target="_blank"
-        >twitter➚</a
-      ><br />
-      <a
-        href="https://www.discordapp.com/users/247423796040957962"
-        class="social-links sidebar"
-        target="_blank"
-        >discord➚</a
-      >
+      <a href="mailto:rohithseby21@gmail.com" class="social-links sidebar" target="_blank">email➚</a><br />
+      <a href="https://www.twitter.com" class="social-links sidebar" target="_blank">twitter➚</a><br />
+      <a href="https://www.discordapp.com/users/247423796040957962" class="social-links sidebar"
+        target="_blank">discord➚</a>
     </div>
   </div>
 </body>
