--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
       </div>
     </div>
     <div id="socials">
-      <a href="https://www.github.com" class="social-links" target="_blank">github➚</a>
-      <a href="https://www.linkedin.com" class="social-links" target="_blank">linkedin➚</a>
+      <a href="https://www.github.com/rohithseby" class="social-links" target="_blank">github➚</a>
+      <a href="https://www.linkedin.com/in/rohith-seby-1247b1223/" class="social-links" target="_blank">linkedin➚</a>
     </div>
     <div id="sidebar-bottom-left">
       <a href="mailto:rohithseby21@gmail.com" class="social-links sidebar" target="_blank">email➚</a><br />
-      <a href="https://www.twitter.com" class="social-links sidebar" target="_blank">twitter➚</a><br />
+      <a href="https://www.twitter.com/" class="social-links sidebar" target="_blank">twitter➚</a><br />
       <a href="https://www.discordapp.com/users/247423796040957962" class="social-links sidebar"
         target="_blank">discord➚</a>
     </div>
