--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="section" id="my-work">
         <div class="work-tiles close-mid-tiles">
           <div class="work-image">
-            <a href="https://neetocode.com/site/rohith-seby/HCJ-FSY" alt="finding frogs project" target="_blank">
+            <a href="https://rohithseby.github.io/js-project/" alt="finding frogs project" target="_blank">
               <img
                 src="https://cdn.discordapp.com/attachments/431354432987594763/1027138920535822366/battleshipbw.jpg" />
             </a>
